tests/fail/ShiftRightError.java
package fail;

public class ShiftRightError {
    public static void main(String[] args) {
        System.out.println(19 >> 'a');
    }
}